--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -13,14 +13,13 @@ jobs:
 
         - uses: actions/upload-artifact@v3
         # add the line below to store screenshots only on failures
-         if: failure()
+        # if: failure()
         with:
           name: cypress-screenshots
           path: cypress/screenshots
-         # if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
+          if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
       - uses: actions/upload-artifact@v3
-      if: always()
         with:
           name: cypress-videos
           path: cypress/videos
-        #  if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
+          if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
